fixing visibility icon hitbox

--- a/apps/sponsor/src/components/LoginForm/LoginForm.module.scss
+++ b/apps/sponsor/src/components/LoginForm/LoginForm.module.scss
@@ -69,4 +69,8 @@
   cursor: pointer;
   background: transparent;
   border: none;
+
+  &Disabled {
+    cursor: default;
+  }
 }
